modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/configurations/SecurityConfig.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/eventController.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/eventRestController.java 	new file:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/typeRestController.java 	modified:   src/main/resources/static/css/eventTab.css 	modified:   src/main/resources/static/css/listStyle.css 	modified:   src/main/resources/static/css/schedule.css 	modified:   src/main/resources/static/css/styles.css 	modified:   src/main/resources/static/css/topBar.css 	new file:   src/main/resources/static/images/EventTabIcons/Association.svg 	new file:   src/main/resources/static/images/EventTabIcons/Club.svg 	new file:   src/main/resources/static/images/EventTabIcons/JuniorEnterprise.svg 	deleted:    src/main/resources/static/js/daypilot-all.min.js 	modified:   src/main/resources/static/js/lists.js 	modified:   src/main/resources/static/js/schedule.js 	new file:   src/main/resources/static/manager-images/0ad8018b-885a-41d3-a0e8-7ca65c8dcc4d.jpg 	new file:   src/main/resources/static/manager-images/2e389061f6b8e41fdfa27d95c9149b38.jpg 	new file:   src/main/resources/static/manager-images/f5145374d5744571a8cfb02be3e26e50.jpg 	modified:   src/main/resources/templates/eventTab.html 	modified:   src/main/resources/templates/schedule.html

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -8,6 +8,7 @@
   padding: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
+  line-height: 1.4;
 }
 
 :root {
@@ -24,6 +25,10 @@
 
 a{
   text-decoration: none;
+}
+
+hr{
+  margin: 15px 0;
 }
 
 body {
