--- a/src/main/resources/static/css/eventTab.css
+++ b/src/main/resources/static/css/eventTab.css
@@ -3,7 +3,7 @@
     display: flex;
 }
 main{
-    width: 70%;
+    width: 65%;
     padding: 0 40px;
 }
 .actionBtns{
@@ -12,15 +12,22 @@ main{
     gap: 20px;
     margin-top: 20px;
 }
+table td{
+    font-size: 16px;
+    padding: 0px;
+}
 .container.main-tables{
     position: relative;
-    height: 69%;
+    height: 73vh;
     margin: auto;
     margin-top: 30px;
     padding: 20px 40px;
     background-color: var(--white);
     box-shadow: 0 3px 20px rgba(0, 0, 0, 0.10);
     border-radius: 50px;
+}
+.tableContainer{
+    height: 80%;
 }
 .table-lists{
     position: relative;
@@ -39,12 +46,12 @@ main{
 .table-lists .tab:hover{
     cursor: pointer;
     color: var(--black1);
-    font-weight: bold;
+    font-weight: 600;
     transition: 0.2s;
 }
 .table-lists .tab.active{
     color: var(--black1);
-    font-weight: bold;
+    font-weight: 600;
 }
 .line{
     position: absolute;
@@ -58,12 +65,12 @@ main{
 }
 
 aside{
-    width: 30%;
-    padding: 20px;
+    width: 35%;
+    padding: 10px 20px;
     box-shadow: 0 3px 30px rgba(0, 0, 0, 0.15);
-}
-aside *{
-    margin: auto;
+    .user,.username,.eventInfo,.sheet{
+        margin: auto;
+    }
 }
 .username{
     text-align: center;
@@ -83,11 +90,12 @@ aside .user{
 }
 .cardSide{
     display: none;
-    margin-top: 30px;
+    margin: auto;
+    margin-top: 25px;
     margin-bottom: 10px;
     width: 100%;
     height: 80px;
-    box-shadow: 0 2px 15px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.212);
     border-radius: 10px;
     justify-content: space-evenly;
     align-items: center;
@@ -102,66 +110,189 @@ aside .user{
 }
 
 .title-card{
-    font-weight: 500;
+    color: var(--black1);
+    font-weight: 600;
 }
 
 .cardSide .circle{
     width: 40px;
     height: 40px;
     background-color: #D7EBFF;
+    color: var(--blue);
     border-radius: 100%;
 }
 .card-budget{
     min-height: 40px;
     min-width: 110px;
     color: var(--black2);
+    font-weight: 500;
+}
+.eventInfo{
+    overflow-y: scroll;
+    height: 490px;
+    margin-bottom: 10px;
 }
 .eventInfo .image{
+    position: relative;
     width: 100%;
-    height: 300px;
+    height: 250px;
     background-color: #4B4B4B;
     border-radius: 10px;
     margin-bottom: 10px;
+
+    img{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 10px;
+        object-fit: cover;
+    }
+}
+.titleInfo-title{
+    color: var(--black1);
+    font-size: 1.1rem;
+    font-weight: 600;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 270px;
+}
+.info1{
+    border: 2px solid #D6D6D6;
+    border-radius: 10px;
+    padding: 15px;
+    margin-bottom: 25px;
 }
 
-.info1{
-    border: 1px solid var(--black2);
-    border-radius: 10px;
-}
 .titleInfo{
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
+.titleInfo img{
+    width: 20px;
 }
 .event-card-info{
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+    padding: 10px;
 }
-
+.event-card-info div p{
+    color: var(--black3);
+    font-size: 11px;
+}
 .event-card-info img{
-    width: 50px;
+    width: 34px;
+    height: 30px;
+}
+.event-card-info div{
+    padding: 0px 5px;
 }
 .event-card-info.venue{
+    height: 80px;
     margin-bottom: 20px;
 }
-.separator{
-    width: 50px;
-    height: 40%;
+.event-card-info.venue:hover{
+    background-color: #F5F5F5;
+}
+.event-card-info h6{
+    color: var(--black1);
+    font-weight: 500;
+    font-size: 13px;
+}
+div.separator{
+    height: 100%;
     background-color: #D6D6D6;
+    padding: 0 1px;
+}
+.break{
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 70px;
+}
+.dates{
+    display: flex;
+    justify-content: space-between;
+    gap: 30px;
+
+    p{
+        width: 100px;
+    }
+}
+.event-card-info.dates{
+    width: auto;
 }
 .event-card-info.dates a{
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.break{
+.titleInfo-title{
+    color: var(--black1);
+    width: auto;
+}
+.taskInfo{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: var(--blue);
+}
+.taskCards{
+    width: 100%;
+    height: 400px;
+    overflow-y: scroll;
+    padding: 0 10px;
+    padding-top: 5px;
+}
+.taskCard{
+    display: block;
+    margin-bottom: 20px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.212);
+    padding: 15px;
+}
+.taskCard:last-of-type{
+    margin-bottom: 0;
+}
+.taskCard h6{
+    font-size: 15px;
+    font-weight: 500;
+    color: var(--black1);
+    margin-bottom: 10px;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
-    width: 80px;
 }
+div.taskBody{
+    display: flex;
+    justify-content: space-between;
+    color: #414141;
+    align-items: center;
+}
+.taskBody p{
+    font-size: 14px;
+}
+.assignee p:nth-child(2){
+    font-weight: 500;
+}
+.taskBody div:nth-child(3){
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    gap: 5px;
+    *{
+        font-size: 12px;
+    }
+}
+.sheet{
+    display: flex;
+    justify-content: center;
+}
+
 /*COMMON STYLES*/
 .main-btn{
     padding: 10px 12px;
@@ -174,7 +305,13 @@ aside .user{
     align-items: center;
     gap: 10px;
 }
-
+.secondaryBtn{
+    padding: 5px 12px;
+    color: var(--blue);
+    font-size: 15px;
+    border: 2px solid var(--blue);
+    border-radius: 200px;
+}
 .filters{
     box-shadow: 0 3px 8px rgba(0, 0, 0, 0.16);
     border: none;
@@ -196,9 +333,8 @@ aside .user{
 }
 
 .pagination{
-    position: absolute;
-    bottom: 30px;
-    right: 45%;
+    display: flex;
+    justify-content: center;
 }
 .pagination div{
     display: flex;
@@ -226,8 +362,39 @@ aside .user{
     background-color: var(--blue);
     color: var(--white);
 }
+.progression {
+    width: 140px;
+    background-color: #D6D6D6;
+    border-radius: 25px;
+}
+.progressBar {
+    height: 5px;
+    width: 50%;
+    background-color: var(--blue);
+    border-radius: 25px;
+    transition: width 1s;
+}
 
+.status{
+    padding: 4px 15px;
+    border-radius: 200px;
+    width: -moz-fit-content;
+    width: fit-content;
+}
+.status.pending{
+    color: #EB717E;
+    border: 2px solid #EB717E;
+}
 
+.status.completed{
+    color: #94EA94;
+    border: 2px solid #94EA94;
+}
+
+.status.inProgress{
+    color: var(--blue);
+    border: 2px solid var(--blue);
+}
 /* * {
     font-family: "Poppins","Ubuntu", sans-serif !important;
     margin: 0;
@@ -499,17 +666,7 @@ nav[aria-label="breadcrumb"] {
 .breadcrumb-item.active {
     color: #6c757d;
 }
-.progress-bar {
-    width: 100%;
-    background-color: #f3f3f3;
-    border-radius: 25px;
-}
-.progress-bar-fill {
-    height: 30px;
-    background-color: var(--blue);
-    border-radius: 25px;
-    transition: width 1s;
-}
+
 
 #currentPN{
     border: none;
