--- a/src/main/resources/static/css/schedule.css
+++ b/src/main/resources/static/css/schedule.css
@@ -4,7 +4,9 @@ body{
 .scheduleCalendar{
     display: flex;
 }
-
+.left{
+    padding: 0 10px;
+}
 .calendar{
     flex: 90%;
     margin: 20px;
@@ -18,13 +20,15 @@ body{
     justify-content: flex-start;
     gap: 20px;
     margin-bottom: 20px;
+
     button{
         background-color: transparent;
         border: 2px solid #000;
         border-radius: 0;
-        font-size: 18px;
+        font-size: 14px;
         font-weight: bold;
-        padding: 10px 30px;
+        padding: 8px 20px;
+        cursor: pointer;
     }
 
     button:hover, button.active{
@@ -33,7 +37,203 @@ body{
     }
 }
 
+.create{
+    transform: translateX(90%);
+    margin-top: 20px;
+}
 
+/* 
 div.month_default_cell{
     
+} */
+
+.month_default_header_inner.calendarHeader{
+    background-color: white;
+    color: #4a4a4a;
+    font-weight: 500;
+    border-right: 2px solid rgb(217, 217, 217);
+    border-bottom: 2px solid rgb(217, 217, 217);
+}
+
+
+/*CUSTOMIZING CALENDAR*/
+div#calendar.month_default_main{
+    position: relative;
+    border: none; 
+    /* border-radius: 20px; */
+}
+div.month_default_cell_inner{
+    background-color: white;
+    border-right: 2px solid rgb(217, 217, 217);
+    border-bottom: 2px solid rgb(217, 217, 217);
+}
+div.month_default_header_inner{
+    background-color: white;
+    color: #4a4a4a;
+    font-weight: 500;
+    border-right: 2px solid rgb(217, 217, 217);
+    border-bottom: 2px solid rgb(217, 217, 217);
+}
+.month_default_header_inner.calendarHeaderSaturday{
+    border-right: none;    
+    background-color: white;
+    color: #4a4a4a;
+    font-weight: 500;
+    border-bottom: 2px solid rgb(217, 217, 217);
+}
+div.month_default_cell_inner.bottomcell{
+    border-bottom: none;
+}
+div.month_default_cell_inner.rightcell{
+    border-right: none;
+}
+div.month_default_event_bar{
+    display: none;
+}
+div.month_default_event_inner{
+    border: none;
+    border-radius: 50px;
+    font-size: 10px;
+    margin: 10px 10px 0 10px;
+    height: 10px;
+    color: var(--white);
+}
+div.month_default_event_continueleft div.month_default_event_inner{
+    border-left-style: solid;
+}
+div.month_default_event_continueright div.month_default_event_inner{
+    border-right-style: solid;
+}
+div.navigator_default_todaybox{
+    border: 1px solid var(--blue);
+    border-radius: 100%;
+    background-color: var(--blue) !important;
+}
+div.selectedCell{
+    border: 2px solid var(--blue);
+    border-radius: 100%;
+}
+
+/*CUSTOMIZING MINI CALENDAR*/
+div#miniCalendar.navigator_default_main{
+    border: none;
+}
+
+div.navigator_default_titleleft, div.navigator_default_titleright, div.navigator_default_title{
+    border: none;
+    font-weight: 600;
+    background-color: #fff;
+    top: -5px !important;
+}
+
+div.navigator_default_titleleft{
+    left: 150px !important;
+}
+div.navigator_default_titleleft, div.navigator_default_titleright{
+    color: var(--blue);
+    font-size: 16px;
+    border-radius: 5px;
+}
+div.navigator_default_titleleft:hover, div.navigator_default_titleright:hover{
+    background-color: var(--blue);
+    color: #fff;
+}
+div.navigator_default_title{
+    left: 0 !important;
+    right: 0;
+    text-align: left;
+    font-size: 14px;
+    padding-left: 8px;
+    width: 142px !important;
+}
+
+div.navigator_default_cell_text{
+    text-align: center !important;
+    line-height: 30px;
+}
+
+div.navigator_default_dayheader{
+    color: #707070;
+    top: 25px !important;
+}
+div.navigator_default_line{
+    border: none;
+}
+div.navigator_default_weekend{
+    background-color: #fff;
+    color: black;
+    font-weight: 500;
+}
+div.navigator_default_select .navigator_default_cell_box,div.navigator_default_day {
+    background-color: #fff;
+    font-weight: 500;
+}
+
+div.navigator_default_dayother{
+    color: #707070;
+    font-weight: 500;
+}
+
+
+
+#colors{
+    height: 50px;
+    width: 210px;
+    margin: auto;
+    padding: 10px;
+    border-radius: 8px;
+    background-color: #e3e3e3;
+}
+
+.singleColor{
+    height: 30px;
+    width: 30px;
+    box-shadow: 0 3px 20px rgba(0, 0, 0, 0.10);
+    border-radius: 50%;
+}
+
+.tasks{
+    height: 300px;
+    width: 210px;
+    margin: auto;
+    margin-top: 5px;
+    box-shadow: 0 3px 20px rgba(0, 0, 0, 0.10);
+}
+
+.hidden-event{
+    display: none;
+}
+div.month_default_event_inner{
+    color: #000;
+    overflow: visible;
+    margin-top: 25px;
+}
+.firstEvent div.month_default_event_inner{
+    overflow: visible;
+}
+.firstEvent .number{
+    width: 200px;
+    height: 20px;
+    position: absolute;
+    bottom: -200%;
+    left: 0px;
+    opacity: 1;
+    color: #707070;
+    font-weight: 500;
+    font-size: 14px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.eventTitle{
+    position: absolute;
+    top: -130%;
+    width: 100%;
+    color: #000;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-size: 12px;
+    font-weight: 600;
 }
