--- a/src/main/resources/static/css/topBar.css
+++ b/src/main/resources/static/css/topBar.css
@@ -64,3 +64,9 @@
     height: 100%;
     object-fit: cover;
   }
+
+  .userDetails{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
