modified:   src/main/resources/application.properties 	modified:   src/main/resources/static/css/eventTab.css 	modified:   src/main/resources/static/css/styles.css 	modified:   src/main/resources/static/js/schedule.js

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -39,8 +39,8 @@ body {
 /* ===================== Main ===================== */
 .main {
     position: absolute;
-    width: calc(100% - 300px);
-    left: 300px;
+    width: calc(100% - 220px);
+    left: 220px;
     min-height: 100vh;
     background: var(--white);
     transition: 0.5s;
@@ -136,4 +136,8 @@ body {
 }
 .myprimarybtn:hover{
     cursor: pointer;
+}
+
+a{
+  text-decoration: none;
 }
