--- a/src/main/resources/static/css/dashboard.css
+++ b/src/main/resources/static/css/dashboard.css
@@ -41,11 +41,12 @@
 .photo{
   width: 100%;
   height: 367px;
-  background: #a44d4d;
+  background: #ffffff;
   padding: 20px;
   margin-top: 20px;
   margin-bottom: 20px;
   border-radius: 10px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
 }
 
 .table{
@@ -129,4 +130,30 @@ h1{
 width: 30%;
 height: 82.5vh;
 margin: 0 30px 0 0px;
+}
+
+#slider {
+    position: relative;
+    height: 100%; /* Adjust as needed */
+    width: 100%; /* Adjust as needed */
+}
+
+.slide {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: opacity 1s;
+    border-radius: 1%;
+    img{
+      width: 100%;
+      height: 100%;
+      position:absolute;
+      object-fit: cover;
+      border-radius: 1%; 
+    }
+}
+
+.slide.active {
+    opacity: 1;
 }
