--- a/src/main/resources/templates/Contact.html
+++ b/src/main/resources/templates/Contact.html
@@ -21,21 +21,7 @@
 			<!-- ========================= Main ==================== -->
 			
 			<div class="main">
-				<div class="topbar">
-					<div class="toggle">
-						<ion-icon name="menu-outline"></ion-icon>
-					</div>
-					<div class="search">
-						<label>
-							<input type="text" placeholder="Search here">
-							<ion-icon name="search-outline"></ion-icon>
-						</label>
-					</div>
-					
-					<div class="user">
-						<img src="assets/imgs/customer01.jpg" alt="">
-					</div>
-				</div>
+				<div class="topbar" th:replace="~{topBar :: topBar}"></div>
 				<div class="container">
 			</div>
 			<div class="container">
@@ -91,41 +77,7 @@
                     </table>
                 </div>
 
-				<div id="overlay" class="overlay" style="flex-direction: column;">
-					<form class="form-container" id="contactForm" th:action= "@{/contacts/save-project}" method="post" style="padding: 25px;border-radius: 20px;">
-						<h2><center>Fill the Contact Form</center></h2>
-					  <div class="form-group">
-						<label for="name">Name:</label>
-						<input type="text" id="name" name="name" placeholder="Your name please" required>
-					  </div>
-					  <div class="form-group">
-						<label for="email">Email:</label>
-						<input type="email" id="email" name="email" placeholder="The email Here !!!" required>
-					  </div>
-					  <div class="form-group">
-						<label for="phoneNumber">Phone Number:</label>
-						<input type="tel" id="phoneNumber" name="phoneNumber" placeholder="123-456-7890" required>
-					  </div>
-					  <div class="form-group">
-						<label for="country">Country:</label>
-						<select id="country" name="country" required>
-						  <option value="">Select Country</option>
-						  <option value="USA">USA</option>
-						  <option value="Canada">Canada</option>
-						  <option value="UK">UK</option>
-						  <option value="CAM">Cameroon</option>
-						  <option value="FR">France</option>
-						  <!-- Add more options as needed -->
-						</select>
-					  </div>
-
-					<div class="formbuto">
-						<button type="submit" class="fbtn" onsubmit="return confirm('Are you sure you wish to Create?');">Submit</button>
-					  	<button id="closeFormBtn" class="fbtn" style="background-color: rgb(200, 1, 1);">Close</button>
-					</div>
-
-					</form>
-				  </div>
+				<div id="overlay" class="overlay" style="flex-direction: column;" th:replace="~{otherFragments :: contactForm}"></div>
 		</div>
 
 </body>
