modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/configurations/EnvironmentVariables.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/UserController.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/eventController.java 	new file:   src/main/java/com/gp2/appwebeventsmanagementgp2/services/EmailSenderService.java 	modified:   src/main/resources/application.properties 	new file:   src/main/resources/static/css/analytics.css 	new file:   src/main/resources/static/css/eventSheet.css 	modified:   src/main/resources/static/css/eventTab.css 	modified:   src/main/resources/static/css/topBar.css 	modified:   src/main/resources/static/js/eventTab.js 	modified:   src/main/resources/static/js/lists.js 	modified:   src/main/resources/static/js/schedule.js 	new file:   src/main/resources/static/js/topBar.js 	modified:   src/main/resources/templates/Analytics.html 	deleted:    src/main/resources/templates/ImageUpload.html 	new file:   src/main/resources/templates/Report.html 	new file:   src/main/resources/templates/eventSheet.html 	modified:   src/main/resources/templates/eventTab.html 	modified:   src/main/resources/templates/index.html 	modified:   src/main/resources/templates/navigation.html 	modified:   src/main/resources/templates/schedule.html 	modified:   src/main/resources/templates/topBar.html

--- a/src/main/resources/static/css/topBar.css
+++ b/src/main/resources/static/css/topBar.css
@@ -70,3 +70,32 @@
     align-items: center;
     gap: 10px;
   }
+
+  .settingsModal{
+    display: none;
+  }
+
+  .modal{
+    height: 400px;
+    width: 100px;
+    background-color: #c5c5c5;
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 10px 20px;
+  }
+
+  .manager{
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .modal a{
+    width: 100%;
+    height: 50px;
+  }
+  .modal a:hover{
+    background-color: var(--blue);
+    opacity: 0.4;
+    transition: all 0.5s linear;
+  }
