--- a/src/main/resources/templates/eventTab.html
+++ b/src/main/resources/templates/eventTab.html
@@ -172,7 +172,7 @@
                 </div>
             </div>
             <div class="sheet">
-                <a href="" class="secondaryBtn">view sheet</a>
+                <a th:href="@{/events/eventSheet}" class="secondaryBtn">view sheet</a>
             </div>
         </aside>
     </div>
