--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -63,7 +63,7 @@
                 </li>
 
                 <li>
-                    <a href="#">
+                    <a  th:href= "@{/events/analytics}">
                         <span class="icon">
                             <ion-icon name="analytics-outline"></ion-icon>
                         </span>
