--- a/src/main/resources/static/css/analytics.css
+++ b/src/main/resources/static/css/analytics.css
@@ -1,39 +1,75 @@
-main{
+main {
     padding: 40px 0;
 }
-.group{
+
+.group {
     display: flex;
     gap: 20px;
     justify-content: space-between;
 }
-.group.groupCard{
+
+.group.groupCard {
     gap: 65px;
 }
-.card{
+
+.card {
     background-color: #fff;
-    box-shadow: 0 0 10px rgb(0, 0, 0,0.15);
+    box-shadow: 0 0 10px rgb(0, 0, 0, 0.15);
     border-radius: 10px;
 }
 
-.card-1{
+.card-1 {
     height: 150px;
     width: 250px;
 }
-.card-2{
+
+.card-2 {
     height: 400px;
     width: 580px;
 }
-.topbar{
+
+.topbar {
     padding: 0;
 }
 
-.card-11{
+.card-11 {
     height: 220px;
     width: 560px;
     margin-top: 30px;
 }
-.card-3{
+
+.card-3 {
     height: 300px;
     width: 560px;
     margin-top: 30px;
+}
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    border-radius: 5px;
+    padding: 20px;
+
+    text-align: center;
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.card p {
+    font-size: 20px;
+    color: #333;
+}
+
+.card span {
+    font-size: 24px;
+    font-weight: bold;
+    color: #007BFF;
+}
+
+.card-1 {
+    background: rgba(var(--blue), 0.75);
+    color: white;
+    align-content: center;
 }
