--- a/src/main/resources/templates/Analytics.html
+++ b/src/main/resources/templates/Analytics.html
@@ -22,21 +22,27 @@
         <div class="topbar" th:replace="~{topBar :: topBar}">
         </div>
         <main>
-            <div class="report"><a th:href= "@{/events/report}">generate report</a></div>
+            <div class="report primary"><a th:href= "@{/events/report}">generate report</a></div>
             <div class="group">
                 <div>
                     <div class="group groupCard">
-                        <div class="card totalExpenses card-1"></div>
-                        <div class="card totalEvents card-1"></div>
+                        <div class="card totalExpenses card-1">
+                            <p>Total Expenses: <span th:text="${#numbers.formatDecimal(totalExpenses, 1, 2)}"></span></p>
+                        </div>
+                        
+                        <div class="card totalEvents card-1">
+                            <p>Total Events: <span th:text="${totalEvents}"></span></p>
+                        </div>
+                        
                     </div>
-                    <div class="taskPerEvent card card-11"></div>
+                    <div class="taskPerEvent card card-11"> <canvas id="taskChart"></canvas></div>
                 </div>
-                <div class="budgetEstimActual card card-2"></div>
+                <div class="budgetEstimActual card card-2"><canvas id="budgetChart"></canvas></div>
             </div>
             <div class="group">
-                <div class="EventPervenue card card-3"></div>
-                <div class="eventEstimActual card card-3"></div>
-                <div class="eventPerVenuePie card card-3"></div>
+                <div class="EventPervenue card card-3"><canvas id="contactChart"></canvas></div>
+                <div class="eventEstimActual card card-3"><canvas id="eventChart"></canvas></div>
+                <div class="eventPerVenuePie card card-3"><canvas id="venueChart"></canvas></div>
             </div>
         </main>    
     </div>
@@ -46,6 +52,222 @@
     <!-- ====== ionicons ======= -->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
+    <script>/*<![CDATA[*/
+        var ctx = document.getElementById('budgetChart').getContext('2d');
+              var budgets = /*[[${budgets}]]*/ [];
+              var labels = budgets.map(function(budget) { return budget.title; });
+              var estimatedAmounts = budgets.map(function(budget) { return budget.estimatedAmount; });
+              var actualAmounts = budgets.map(function(budget) { return budget.actualAmount; });
+              var chart = new Chart(ctx, {
+                  type: 'bar',
+                  data: {
+                      labels: labels,
+                      datasets: [{
+                          label: 'Estimated Amount',
+                          data: estimatedAmounts,
+                          backgroundColor: 'rgba(75, 192, 192, 0.2)',
+                          borderColor: 'rgba(75, 192, 192, 1)',
+                          borderWidth: 1
+                      }, {
+                          label: 'Actual Amount',
+                          data: actualAmounts,
+                          backgroundColor: 'rgba(255, 99, 132, 0.2)',
+                          borderColor: 'rgba(255, 99, 132, 1)',
+                          borderWidth: 1
+                      }]
+                  },
+                  options: {
+                      scales: {
+                          y: {
+                              beginAtZero: true
+                          }
+                      }
+                  }
+              });
+              /*]]>*/
+      
+                /*<![CDATA[*/
+                var ctx = document.getElementById('taskChart').getContext('2d');
+              var events = /*[[${events}]]*/ [];
+              var labels = events.map(function(event) { return event.name; });
+              var taskCounts = events.map(function(event) { return event.tasks.length; });
+              var chart = new Chart(ctx, {
+                  type: 'bar',
+                  data: {
+                      labels: labels,
+                      datasets: [{
+                          label: 'Number of Tasks',
+                          data: taskCounts,
+                          backgroundColor: 'rgba(75, 192, 192, 0.2)',
+                          borderColor: 'rgba(75, 192, 192, 1)',
+                          borderWidth: 1
+                      }]
+                  },
+                  options: {
+                      scales: {
+                          y: {
+                              beginAtZero: true
+                          }
+                      }
+                  }
+              });
+              /*]]>*/
+
+          /*<![CDATA[*/
+var ctx = document.getElementById('eventChart').getContext('2d');
+var events = /*[[${events}]]*/ [];
+var labels = events.map(function(event) { return event.name; });
+// var actualAttendeesData = events.map(function(event) { return event.actualAttendees; });
+// var estimatedAttendeesData = events.map(function(event) { return event.estimatedAttendees; });
+var chart = new Chart(ctx, {
+    type: 'bar',
+    data: {
+        labels: labels,
+        datasets: [{
+            label: 'Actual Attendees',
+            data: actualAttendeesData,
+            backgroundColor: 'rgba(75, 192, 192, 0.2)',
+            borderColor: 'rgba(75, 192, 192, 1)',
+            borderWidth: 1
+        },
+        {
+            label: 'Estimated Attendees',
+            data: estimatedAttendeesData,
+            backgroundColor: 'rgba(153, 102, 255, 0.2)',
+            borderColor: 'rgba(153, 102, 255, 1)',
+            borderWidth: 1
+        }]
+    },
+    options: {
+        scales: {
+            y: {
+                beginAtZero: true
+            }
+        }
+    }
+});
+/*]]>*/
+
+/*<![CDATA[*/
+var events = /*[[${events}]]*/ [];
+    var venues = {};
+
+    // Count the number of events per venue
+    events.forEach(function(event) {
+        if (venues[event.venue]) {
+            venues[event.venue]++;
+        } else {
+            venues[event.venue] = 1;
+        }
+    });
+
+    // Prepare the data for the pie chart
+    var labels = Object.keys(venues);
+    var data = Object.values(venues);
+
+    var ctx = document.getElementById('venueChart').getContext('2d');
+    var chart = new Chart(ctx, {
+        type: 'pie',
+        data: {
+            labels: labels,
+            datasets: [{
+                label: 'Number of Events',
+                data: data,
+                backgroundColor: [
+                    'rgba(255, 99, 132, 0.2)',
+                    'rgba(54, 162, 235, 0.2)',
+                    'rgba(255, 206, 86, 0.2)',
+                    'rgba(75, 192, 192, 0.2)',
+                    'rgba(153, 102, 255, 0.2)',
+                    'rgba(255, 159, 64, 0.2)'
+                ],
+                borderColor: [
+                    'rgba(255, 99, 132, 1)',
+                    'rgba(54, 162, 235, 1)',
+                    'rgba(255, 206, 86, 1)',
+                    'rgba(75, 192, 192, 1)',
+                    'rgba(153, 102, 255, 1)',
+                    'rgba(255, 159, 64, 1)'
+                ],
+                borderWidth: 1
+            }]
+        },
+        options: {
+            responsive: true,
+            plugins: {
+                legend: {
+                    position: 'top',
+                },
+                title: {
+                    display: true,
+                    text: 'Percentage of Events per Venue'
+                }
+            }
+        }
+    });
+    /*]]>*/
+
+      /*<![CDATA[*/
+    var tasks = /*[[${tasks}]]*/ [];
+    var contacts = {};
+
+    // Count the number of tasks per contact
+    tasks.forEach(function(task) {
+        var contactName = task.contacts.name;
+        if (contacts[contactName]) {
+            contacts[contactName]++;
+        } else {
+            contacts[contactName] = 1;
+        }
+    });
+
+    // Prepare the data for the pie chart
+    var labels = Object.keys(contacts);
+    var data = Object.values(contacts);
+
+    var ctx = document.getElementById('contactChart').getContext('2d');
+    var chart = new Chart(ctx, {
+        type: 'pie',
+        data: {
+            labels: labels,
+            datasets: [{
+                label: 'Number of Tasks',
+                data: data,
+                backgroundColor: [
+                    'rgba(255, 99, 132, 0.2)',
+                    'rgba(54, 162, 235, 0.2)',
+                    'rgba(255, 206, 86, 0.2)',
+                    'rgba(75, 192, 192, 0.2)',
+                    'rgba(153, 102, 255, 0.2)',
+                    'rgba(255, 159, 64, 0.2)'
+                ],
+                borderColor: [
+                    'rgba(255, 99, 132, 1)',
+                    'rgba(54, 162, 235, 1)',
+                    'rgba(255, 206, 86, 1)',
+                    'rgba(75, 192, 192, 1)',
+                    'rgba(153, 102, 255, 1)',
+                    'rgba(255, 159, 64, 1)'
+                ],
+                borderWidth: 1
+            }]
+        },
+        options: {
+            responsive: true,
+            plugins: {
+                legend: {
+                    position: 'top',
+                },
+                title: {
+                    display: true,
+                    text: 'Percentage of Tasks per Contact'
+                }
+            }
+        }
+    });
+    /*]]>*/
+          </script>
 </body>
 
 </html>
