modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/contactController.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/contactRestController.java 	new file:   src/main/java/com/gp2/appwebeventsmanagementgp2/models/contactForm.java 	new file:   src/main/java/com/gp2/appwebeventsmanagementgp2/models/contactTypeForm.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/repositories/contactRepository.java 	new file:   src/main/java/com/gp2/appwebeventsmanagementgp2/repositories/contactTypeMappingRepository.java 	new file:   src/main/java/com/gp2/appwebeventsmanagementgp2/repositories/contactTypeRepository.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/services/contactServiceImpl.java 	new file:   src/main/java/com/gp2/appwebeventsmanagementgp2/services/contactTypeMappingService.java 	new file:   src/main/java/com/gp2/appwebeventsmanagementgp2/services/contactTypeMappingServiceImpl.java 	new file:   src/main/java/com/gp2/appwebeventsmanagementgp2/services/contactTypeService.java 	new file:   src/main/java/com/gp2/appwebeventsmanagementgp2/services/contactTypeServiceImpl.java 	modified:   src/main/resources/static/css/contact.css 	new file:   src/main/resources/static/js/contact.js 	modified:   src/main/resources/static/js/nav.js 	modified:   src/main/resources/templates/Contact.html 	modified:   src/main/resources/templates/createEventForm.html 	modified:   src/main/resources/templates/eventTab.html 	modified:   src/main/resources/templates/index.html 	modified:   src/main/resources/templates/otherFragments.html 	modified:   src/main/resources/templates/task.html

--- a/src/main/resources/templates/createEventForm.html
+++ b/src/main/resources/templates/createEventForm.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <div id="overlay" class="overlay"  th:fragment="createEventForm">
+    <div id="overlay" class="overlay"  th:fragment="createEventForm" style="display: none;">
         <div class="form-container">
             <h2 style="margin-bottom: 30px;"><center>Fill out the form then Click "Submit" to create an Event:</center></h2>
             <form id="myForm" class="createEventForm" th:action="@{/events/create}" method="post" onsubmit="return validateEstimatedAttendees();" enctype="multipart/form-data">
