--- a/src/main/resources/templates/eventTab.html
+++ b/src/main/resources/templates/eventTab.html
@@ -22,11 +22,7 @@
                 </ul>
             </div>
             <div class="actionBtns">
-                <select class="filters" title="filters">
-                    <option selected>Date modified</option>
-                    <option>Recent</option>
-                </select>
-                <a href="" class="main-btn"><img src="/images/EventTabIcons/plus.svg" alt=""> create event</a>
+                <button id="displayFormBtn"  class="main-btn"><img src="/images/EventTabIcons/plus.svg" alt=""> create event</button>
             </div>
             <div class="container main-tables">
                 <div class="table-lists">
