--- a/src/main/resources/static/css/contact.css
+++ b/src/main/resources/static/css/contact.css
@@ -53,13 +53,13 @@
         overflow-y: auto;
         padding: 3%;
     }
-    .container {
+    /* .container {
       width: 100%;
       padding-right: 15px;
       padding-left: 15px;
       margin-right: auto;
       margin-left: auto;
-  }
+  } */
   
   .row {
       display: flex;
@@ -117,3 +117,160 @@
     overflow-y:auto;
 }
   
+
+
+h1{
+  font-size: 24px;
+}
+
+.nav{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.contact-lists{
+  position: relative;
+  margin: 20px 0 10px 0;
+}
+.contact-lists .tab{
+  color: #4B4B4B;
+  border: none;
+  background-color: transparent;
+  font-size: 18px;
+  font-weight: 400;
+  margin-right: 20px;
+  margin-bottom: 7px;
+  transition: 0.2s;
+}
+.contact-lists .tab:hover{
+  cursor: pointer;
+  color: var(--black1);
+  font-weight: 600;
+  transition: 0.2s;
+}
+.contact-lists .tab.active{
+  color: var(--black1);
+  font-weight: 600;
+}
+.line{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 45px;
+  height: 4px;
+  border-radius: 5px;
+  background-color: var(--blue);
+  transition: all 0.3s ease-in-out;
+}
+.sort a{
+  background-color: transparent;
+  border: 2px solid var(--blue);
+  color: var(--blue);
+  padding: 5px 10px;
+  border-radius: 5px;
+  transition: 0.2s;
+  ion-icon{
+    transform: translateY(2px);
+  }
+}
+.sort a:hover, .sort a.active{
+  background-color: var(--blue);
+  color: white;
+  transition: 0.2s;
+}
+.contactCards{
+  margin-top: 20px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+  transition: 0.5s;
+}
+.cardContainer{
+  display: flex;
+  overflow-y: scroll;
+  width: 100%;
+  height: 500px;
+  align-items: first baseline;
+  padding: 10px;
+}
+.contactCard{
+  width: 250px;
+  height: 300px;
+  margin: auto;
+  text-align: center;
+  padding: 20px 20px;
+  border-radius: 10px;
+  background-color: white;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin-bottom: 10px;
+  transition: 0.2s;
+  display: flexbox;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  animation: fadeIn 1s ease-in-out forwards;
+  animation-delay: calc(var(--order) * 0.2s);
+}
+@keyframes fadeIn {
+  to {
+      opacity: 1;
+  }
+}
+.iconContact ion-icon{
+  font-size: 50px;
+  color: var(--blue);
+  font-weight: 700;
+}
+
+.primary{
+  font-size: 16px;
+  font-weight: 600;
+}
+.secondary{
+  font-size: 12px;
+  color: var(--black2);
+}
+.email{
+  margin-bottom: 20px;
+}
+.type{
+  font-size: 18px;
+  font-weight: 700;
+  margin-bottom: 40px;
+}
+.actions{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  margin-top: 20px;
+  gap: 20px;
+
+  ion-icon{
+    font-size: 24px;
+    transition: 0.2s;
+    color: #ccc;
+  }
+}
+
+.edit ion-icon:hover{
+  color: #65c865;
+}
+.delete ion-icon:hover{
+  color: #ff0000;
+}
+.assign ion-icon:hover{
+  color: var(--blue);
+}
+
+.add{
+  position: absolute;
+  bottom: 20px;
+}
+
+.actions button{
+  background-color: transparent;
+  border: none;
+}
