--- a/src/main/resources/templates/Contact.html
+++ b/src/main/resources/templates/Contact.html
@@ -6,21 +6,38 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>CONTACTS</title>
-<link rel="stylesheet" th:href="@{/css/dashboard.css}">
-<link rel="stylesheet" th:href="@{css/topBar.css}">
-<link rel="stylesheet" th:href="@{/css/navStyle.css}">
-<link rel="stylesheet" th:href="@{/css/styles.css}">
-<link rel="stylesheet" th:href="@{/css/contact.css}">
+	<link rel="stylesheet" th:href="@{/css/topBar.css}">
+	<link rel="stylesheet" th:href="@{/css/navStyle.css}">
+	<link rel="stylesheet" th:href="@{/css/styles.css}">
+	<link rel="stylesheet" th:href="@{/css/contact.css}">
 </head>
 <body>
 	    <!-- =============== Navigation ================ -->
 		<div class="navigation" th:replace="~{navigation :: navigation}">
 		</div>
-		<div class="container">
-
+		<div class="container main">
+			<div class="topbar" th:replace="~{topBar :: topBar}"></div>
+			<h1>Contacts</h1>
+			<div class="nav">
+				<div class="contact-lists">
+                    <button type="button" class="tab active">Club</button>
+                    <button type="button" class="tab">Association</button>
+                    <button type="button" class="tab">School</button>
+                    <div class="line"></div>
+                </div>
+			</div>
+			<div class="cardContainer">
+				<div class="contactCards">
+				</div>
+			</div>
+			<div class="add">
+				<button id="displayFormBtn" class="btn addContact" type="button">Add contact</button>
+			</div>
+			
+			<div id="overlay" class="overlay"  th:replace="~{otherFragments :: contactForm}"></div>
 			<!-- ========================= Main ==================== -->
 			
-			<div class="main">
+			<!-- <div class="main">
 				<div class="topbar" th:replace="~{topBar :: topBar}"></div>
 				<div class="container">
 			</div>
@@ -77,11 +94,13 @@
                     </table>
                 </div>
 
-				<div id="overlay" class="overlay" style="flex-direction: column;" th:replace="~{otherFragments :: contactForm}"></div>
+		</div>
+			</div> -->
 		</div>
 
 </body>
 <script src="/js/nav.js"></script>
+<script src="/js/contact.js"></script>
     <!-- ====== ionicons ======= -->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
