--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" th:href="@{css/topBar.css}">
     <link rel="stylesheet" th:href="@{css/navStyle.css}">
     <link rel="stylesheet" th:href="@{css/styles.css}">
+    <link rel="stylesheet" th:href="@{css/contact.css}">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.js"></script>
 
 </head>
@@ -63,14 +64,14 @@
                 <div class="photo">
                     <div id="slider">
                         <div th:each="image : ${images}" class="slide">
-                            <img th:src="@{/manager-images/{image}(image=${image})}" />
+                            <img th:src="@{/manager-images/{image}(image=${image})}" title="${image}" />
                         </div>
                     </div>
                 </div>
                 
                 
                 <div class="container table">
-                    <div class="buttonToAdd"><button class="btn-table myprimarybtn">add event</button></div>
+                    <div class="buttonToAdd"><button id="displayFormBtn" class="btn-table myprimarybtn">add event</button></div>
                     <table class="tabTable active" id="eventRest" th:fragment="eventList">
                         <thead class="tablehead">
                             <tr>
@@ -106,7 +107,7 @@
             </main>
             <aside class="side">
                 <div class="tasksList">
-                    <div class="buttonToAddt"><h1>Some Tasks</h1><button class="btn-table myprimarybtn">add Task</button></div>
+                    <div class="buttonToAddt"><h1>Some Tasks</h1><button id="displayFormBtnTask" class="btn-table myprimarybtn">add Task</button></div>
                     <table class="tabTable active" id="taskRest" th:fragment="taskList">
                         <thead class="tablehead">
                             <tr>
@@ -143,16 +144,16 @@
         <!-- ========================= Main ==================== -->
        
 
-    <!-- <div id="overlay" class="overlay"  th:replace="~{createEventForm :: createEventForm}">
+    <div id="overlay" class="overlay"  th:replace="~{createEventForm :: createEventForm}">
     </div>
-    <div id="overlayTask" class="overlayTask"  th:replace="~{task :: task}"></div> -->
+    <div id="overlayTask" class="overlayTask"  th:replace="~{task :: task}"></div>
     
     <!-- =========== Scripts =========  -->
-    <script src="../js/nav.js"></script>
+    <script src="/js/nav.js"></script>
     <!-- ====== ionicons ======= -->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <script>
+    <!-- <script>
         var opt = {
             margin: 1 ,
             filename: 'Event PDF' ,
@@ -167,7 +168,7 @@
                 html2pdf().from(myTable).set(opt).save();
             })
         }
-        </script>
+        </script> -->
      <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
      <script th:inline="javascript">
          /*<![CDATA[*/
