modified:   src/main/resources/templates/schedule.html

--- a/src/main/resources/templates/schedule.html
+++ b/src/main/resources/templates/schedule.html
@@ -18,15 +18,15 @@
                 <button type="button" class="create">create event</button>
                 <div id="miniCalendar"></div>
                 <div id="colors"></div>
-                <div class="tasks"></div>
+                <!-- <div class="tasks"></div> -->
             </div>
             <div class="calendar">
                 <!-- monthly calendar control placeholder -->
                 <div class="calendarButton">
-                    <button type="button">Year</button>
+                    <!-- <button type="button">Year</button> -->
                     <button type="button" class="active">Month</button>
-                    <button type="button">Week</button>
-                    <button type="button">Day</button>
+                    <!-- <button type="button">Week</button> -->
+                    <!-- <button type="button">Day</button> -->
                 </div>
                 <div class="cal Month">
                     <div id="calendar"></div>
