modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/configurations/SecurityConfig.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/budgetRestController.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/contactRestController.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/eventRestController.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/expenseRestController.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/taskRestController.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/userRestController.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/venueRestController.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/services/venueServiceImpl.java 	modified:   src/main/resources/application.properties 	modified:   src/main/resources/static/js/eventTab.js 	modified:   src/main/resources/static/js/lists.js 	modified:   src/main/resources/templates/eventTab.html

--- a/src/main/resources/templates/eventTab.html
+++ b/src/main/resources/templates/eventTab.html
@@ -75,7 +75,7 @@
                 <div class="info1">
                     <div class="titleInfo">
                         <p class="titleInfo-title"></p>
-                        <a href="" title="downlaod sheet"><img src="/images/EventTabIcons/download.svg" alt=""></a>
+                        <a href="" title="downlaod sheet" id="downloadBtn"><img src="/images/EventTabIcons/download.svg" alt=""></a>
                     </div>
                     <a href="" class="event-card-info venue" title="venue">
                         <img src="/images/EventTabIcons/venue.svg" alt="">
